examples/kju/positive/type_inference/identity_function.kju
fun f(x : ?) : ?
{
    return x;
}

fun kju() : Unit
{
	var a : ? = f(3);
}
