examples/kju/negative/functions/return_value_not_matching_declaration.kju
fun f():Bool{
	return 5;
}

fun kju():Unit{
	f();
}